--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@semantic-release/git": "^10.0.1",
     "@types/debug": "^4.1.12",
     "@types/node": "^22.10.5",
+    "@types/xml2js": "^0.4.14",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
     "commitizen": "^4.3.1",
@@ -52,6 +53,7 @@
     "eslint": "^8.57.1",
     "eslint-config-cmyr": "^1.1.32",
     "eslint-plugin-import": "^2.31.0",
+    "hexo": "^7.3.0",
     "husky": "^9.1.7",
     "lint-staged": "^15.3.0",
     "rimraf": "^6.0.1",
@@ -89,7 +91,8 @@
   },
   "dependencies": {
     "dayjs": "^1.11.13",
-    "tslib": "^2.8.1"
+    "tslib": "^2.8.1",
+    "xml2js": "^0.6.2"
   },
   "pnpm": {
     "overrides": {
@@ -99,5 +102,12 @@
   "publishConfig": {
     "access": "public"
   },
-  "type": "module"
+  "type": "module",
+  "hexo": {
+    "version": ">= 3.0.0",
+    "type": "plugin"
+  },
+  "peerDependencies": {
+    "hexo": ">= 3.0.0"
+  }
 }
