--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "start": "node ./dist/index",
     "start:tsx": "cross-env NODE_ENV=production tsx src/index.ts",
     "commit": "cz",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "test": "vitest run"
   },
   "devDependencies": {
     "@commitlint/cli": "^18.6.1",
@@ -61,7 +62,8 @@
     "semantic-release": "21.0.1",
     "tsup": "^8.3.5",
     "tsx": "^4.19.2",
-    "typescript": "^5.7.3"
+    "typescript": "^5.7.3",
+    "vitest": "^2.1.8"
   },
   "config": {
     "commitizen": {
